fix(cxl-lumo-styles): reduce `--cxl-wrap-width`, fixup e957ad8
Until `lumo-typography,` CXL ran with base font size 1.125rem, where
wider wrap made sense.

--- a/packages/cxl-lumo-styles/scss/global.scss
+++ b/packages/cxl-lumo-styles/scss/global.scss
@@ -1,6 +1,6 @@
 html {
   // Variables.
-  --cxl-wrap-width: 90rem;
+  --cxl-wrap-width: 72rem;
   --cxl-wrap-padding: var(--lumo-space-m);
 
   /**
